deploy/kubernetes/apis4powermeter-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apis4powermeterservice
  namespace: apis4powermeter
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apis4powermeter
    microservice: app
