deploy/kubernetes/apis4powermeter-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis4powermeteringress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apis4powermeter      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apis4powermeter
        backend:
          serviceName: apis4powermeterservice
          servicePort: http
